alter buttons, need to fix alignment, add icon to navbar

--- a/styles.css
+++ b/styles.css
@@ -166,8 +166,12 @@ p {
 
 .sec2container {
   display: flex;
+  direction: row;
   background-color: #ffe4f3ff;
-  padding: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-top: 2em;
+  padding-bottom: 0em;
   justify-content: space-evenly;
   margin-left: auto;
   margin-right: auto;
@@ -192,14 +196,19 @@ p {
 .sec2buttons {
   display: flex;
   background-color: #ffe4f3ff;
+  position: relative;
 }
 
 .buttons-container-1 {
+  display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: auto;
+  position: relative;
+  order: -1;
 }
 
 .sec2buttons button {
@@ -212,54 +221,55 @@ p {
   text-decoration: none;
   font-size: inherit;
   font-family: "Poppins", sans-serif;
+  padding-top: 0;
 }
 
-button.view-cakes-1  {
-    font-weight: 400;
-    color: #595758ff;
-    letter-spacing:0.25em;
-    text-transform: uppercase;
-    padding: 1.25em 2em;
-    background: #fff0f0;
-    border: 2px solid #595758ff;
-    border-radius: 0.75em;
-    transition: transform 0.15s;
-    transform-style: preserve-3d;
-  }
+button.view-cakes-1 {
+  font-weight: 400;
+  color: #595758ff;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  padding: 1.25em 2em;
+  background: #fff0f0;
+  border: 2px solid #595758ff;
+  border-radius: 0.75em;
+  transition: transform 0.15s;
+  transform-style: preserve-3d;
+}
 
- button.view-cakes-1::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #ff92c2ff;
-    border-radius: inherit;
-    box-shadow: 0 0 0 2px #595758ff, 0 0.625em 0 0 #ffe3e2;
-    transform: translate3d(0, 0.75em, -1em);
-    transition: transform 0.15s, box-shadow 0.15s;
-  }
+button.view-cakes-1::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ff92c2ff;
+  border-radius: inherit;
+  box-shadow: 0 0 0 2px #595758ff, 0 0.625em 0 0 #ffe3e2;
+  transform: translate3d(0, 0.75em, -1em);
+  transition: transform 0.15s, box-shadow 0.15s;
+}
 
- button.view-cakes-1:hover {
-    background: #ffe9e9;
-    transform: translate(0, 0.25em);
-  }
-  button.view-cakes-1:hover::before {
-    box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
-    transform: translate3d(0, 0.5em, -1em);
-  }
- button.view-cakes-1.btn:active {
-    background: #ffe9e9;
-    transform: translate(0em, 0.75em);
-  }
+button.view-cakes-1:hover {
+  background: #ffe9e9;
+  transform: translate(0, 0.25em);
+}
+button.view-cakes-1:hover::before {
+  box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+  transform: translate3d(0, 0.5em, -1em);
+}
+button.view-cakes-1.btn:active {
+  background: #ffe9e9;
+  transform: translate(0em, 0.75em);
+}
 
- button.view-cakes-1.btn:active::before {
-    box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
-    transform: translate3d(0, 0, -1em);
-  }
+button.view-cakes-1.btn:active::before {
+  box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+  transform: translate3d(0, 0, -1em);
+}
 
 /*.view-cakes-1 {
   width: 150px;
@@ -274,26 +284,26 @@ button.view-cakes-1  {
   border: 2px solid #595758ff;
   text-transform: uppercase;
   margin-left: 10em;*/
-}
 
 .buttons-container-2 {
+  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: center;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: auto;
+  position: relative;
 }
+
 .view-cakes-2 {
   width: 150px;
   height: 75px;
-  background-color:#ffe3e;
-  
-  position: relative;
+  background-color: #ffe3e;
   box-shadow: 15px 15px 0px 0px #ff92c2ff;
   font-family: "Poppins", sans-serif;
   font-size: 20px;
   color: #595758ff;
   border: 2px solid #595758ff;
   text-transform: uppercase;
-  margin-right: 10em;
 }
